# Harmony

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.github/: coverage.yml  deploy-docs.yml  linux.yml  windows.yml
Harmony/STL/: Ascii  Ascii.h  Binary.h  Mesh.h  Parse.h
cmake/: FindSphinx.cmake  cppcheck.cmake
src/STL/: Ascii.cpp  Binary.cpp  Parse.cpp
test/: CMakeLists.txt  test_AsciiSTL.cpp  test_BinarySTL.cpp
